#441700 - User logout
