# backend-api/routes/rpRoutes.js
@@ -14,6 +14,7 @@ module.exports = (app) => {
 
     app.post('/auth/register', AuthController.register);
     app.post('/auth/login', AuthController.login);
+    app.post('/auth/logout', AuthController.logout);
 
     app.route("/products")
     .get(ProductsController.getAll)
